src/styles/global.css
@import "tailwindcss";

@plugin '@tailwindcss/typography';

@theme {
  /* fonts */
  
  --font-space: "Space Mono", sans-serif;
  --font-work: "Work Sans", sans-serif;


  /* colors */
  --color-primary: oklch(86.89 0.29 142.02); /* #27FF0B*/
  --color-background: oklch(99.7 0 0); /* #fefefe */
  --color-foreground: oklch(0 0 0); /* #000000 */
  --color-secondary: oklch(0.38 0 1); /* #434343*/
}

@layer base {
  :root { /* LIGHT MODE */
    --color-background: #EEECDE; /* warm cream */
    --color-foreground: #111111;
    --color-surface: #ffffff;
    --color-primary: #A99BB3; /* lilac */
    --color-tertiary: #ba9bc9;
    --color-secondary: #4A5A72; /* steel blue */
    --color-muted: #245d63; /* soft lavender-gray */
  } 
 .dark {
    /*DARK MODE */
    --color-background: #111111; /* base */
    --color-foreground: #EEECDE; /* warm cream text */
    --color-surface: #A99BB3;
    --color-primary: #4a5a72 ; /* cute jeans */
    --color-secondary: #EEECDE; /* original: f5e6d3 warm creamn*/
    --color-tertiary: #ba9bc9;
    --color-muted: #9197ae; /* dusty lilac */
  }

.heading {
  @apply font-space tracking-[-2%] font-bold;
}
html {
  @apply scroll-smooth;
  overflow-y: scroll;
  font-family: "Work Sans", sans-serif;

  background-color: var(--color-background);
  color: var(--color-foreground);
}



body {
  @apply font-work text-foreground bg-background;
}

article {
  @apply prose prose-neutral prose-img:mx-auto prose-img:my-auto text-lg leading-8;
  @apply prose-headings:font-bold prose-headings:font-space prose-headings:text-foreground mx-auto;
  @apply text-secondary prose-a:underline-offset-2;
}


header a, 
footer a {
  color: var(--color-foreground);
}

#hero-link {
  color: #EEECDE;
}

footer {
background-color: #a99bb3;
}

.dark footer{
  background-color: #4a5a72;
}
a {
  display: inline-block; /* Required for transforms to work on inline elements */
  transition: transform 0.3s ease; /* Smooths the zoom */
  text-decoration: none;
  color: var(--color-muted);
}



a:hover {
  transform: scale(1.1); /* Increases size by 10% */
}
}

footer {
  color: #1f2937;
}

.dark footer {
  color: #f3f4f6;
}

